--- a/styles/index.css
+++ b/styles/index.css
@@ -24,7 +24,7 @@ html:focus-within {
 .sky1 {
     width: 100%;
     height: 100%;
-    background: no-repeat url(../assets/wrapper-logos/wrapper-logo__left.svg);
+    background: no-repeat url(/assets/wrapper-logos/wrapper-logo__left.svg);
     background-size: 30%;
     animation: sky1 1s;
     animation-fill-mode: forwards;
@@ -34,7 +34,7 @@ html:focus-within {
 .sky2 {
     width: 100%;
     height: 100%;
-    background: no-repeat url(../assets/wrapper-logos/wrapper-logo__right.svg);
+    background: no-repeat url(/assets/wrapper-logos/wrapper-logo__right.svg);
     background-size: 30%;
     animation: sky2 1s;
     animation-fill-mode: forwards;
@@ -71,7 +71,7 @@ html:focus-within {
 .main-info__logo {
 	width: 190px;
 	height: 60px;
-	background: no-repeat url(../assets/logo/logo.svg) #fdfdff;
+	background: no-repeat url(/assets/logo/logo.svg) #fdfdff;
     transform: translateY(-100%);
     animation: ani 1s forwards;
     margin-top: 30px;
@@ -152,7 +152,7 @@ html:focus-within {
     height: 54px;
     display: block;
     text-align: center;
-    background: no-repeat url(../assets/time-logos/time-logos.svg);
+    background: no-repeat url(/assets/time-logos/time-logos.svg);
     padding-top: 18px;
     color:#fdfdff;
 }
@@ -166,7 +166,7 @@ html:focus-within {
     height: 54px;
     display: block;
     text-align: center;
-    background: no-repeat url(../assets/time-logos/time-logos.svg);
+    background: no-repeat url(/assets/time-logos/time-logos.svg);
     padding-top: 18px;
     color:#fdfdff;
 }
@@ -194,7 +194,7 @@ html:focus-within {
     height: 54px;
     display: block;
     text-align: center;
-    background: no-repeat url(../assets/time-logos/time-logos.svg);
+    background: no-repeat url(/assets/time-logos/time-logos.svg);
     padding-top: 18px;
     color:#fdfdff;
 }
@@ -249,7 +249,7 @@ html:focus-within {
     width: 20px;
     height: 20px;
     margin-left: 15px;
-    background: no-repeat url(../assets/arrow/arrow-right.svg) 50%;
+    background: no-repeat url(/assets/arrow/arrow-right.svg) 50%;
 }
 
 .footer {
@@ -284,7 +284,7 @@ form{
     outline: none;
     border: none;
     display: inline-block;
-    background: no-repeat url(../assets/arrow/arrow-right.svg) red 50%;
+    background: no-repeat url(/assets/arrow/arrow-right.svg) red 50%;
     color: #fff;
     padding: 14px 14px;
     border-radius: 25px;
@@ -312,7 +312,7 @@ form{
     width: 24px;
     height: 24px;
     margin-left: 0.5rem;
-    background: no-repeat url(../assets/arrow/arrow-down.svg);
+    background: no-repeat url(/assets/arrow/arrow-down.svg);
   }
 
   .footer-other__events--img::before {
@@ -340,7 +340,7 @@ form{
 
 .event-block_01, .event-block_02, .event-block_03, .event-block_04, .event-block_05, .event-block_06, .event-block_07, .event-block_08{
     background: #162C4E;
-    background-image: url(../assets/events-photo/events-photo.svg);
+    background-image: url(/assets/events-photo/events-photo.svg);
     width: 100%;
     height: 100%;
     background-position: right;
