--- a/css/components/media.css
+++ b/css/components/media.css
@@ -6,6 +6,8 @@
     }
 
     .main-info {
+        height: 100%;
+        max-width: 100%;
         align-items: center;
         background: no-repeat url(../../assets/wrapper-logos/wrapper-logo__left.svg), no-repeat url(../../assets/wrapper-logos/wrapper-logo__right.svg) #fdfdff;
         background-size: 74%, 83%, 38%;
@@ -105,17 +107,16 @@
 
 @media (max-width: 768px) {
     .wrapper {
-        width: 812px;
-        height: 360px;
+        min-width: 100%;
+        min-height: 100%;
         display: flex;
         flex-direction: column;
     }
 
     .main-info {
+        max-width: 100%;
+        height: 100%;
         align-items: center;
-        background: no-repeat url(../../assets/wrapper-logos/wrapper-logo__left.svg), no-repeat url(../../assets/wrapper-logos/wrapper-logo__right.svg) #fdfdff;
-        background-size: 98%, 113%, 38%;
-        background-position: -25rem -18rem, 33rem -36rem;
     }
 
     .main-info__logo {
